Code style refactor