@@ -1,24 +1,20 @@
 package cc.hrva.urlshortener.service.impl;
 
 import cc.hrva.urlshortener.repository.UserRepository;
-import java.util.stream.Collectors;
 import cc.hrva.urlshortener.model.User;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 @Service
-@Component("userDetailsService")
-public class DefaultDomainUserDetailsService implements UserDetailsService {
+@RequiredArgsConstructor
+public class DefaultUserDetailsService implements UserDetailsService {
 
     private final UserRepository userRepository;
-
-    public DefaultDomainUserDetailsService(final UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
 
     @Override
     @Transactional
@@ -26,7 +22,7 @@ public class DefaultDomainUserDetailsService implements UserDetailsService {
         return userRepository
                 .findByEmail(email)
                 .map(this::createSpringSecurityUser)
-                .orElseThrow(() -> new UsernameNotFoundException("User " + email + " was not found in the database"));
+                .orElseThrow(() -> new UsernameNotFoundException(String.format("User %s was not found in the database", email)));
     }
 
     private org.springframework.security.core.userdetails.User createSpringSecurityUser(final User user) {
@@ -34,7 +30,7 @@ public class DefaultDomainUserDetailsService implements UserDetailsService {
                 .getAuthorities()
                 .stream()
                 .map(authority -> new SimpleGrantedAuthority(authority.getName()))
-                .collect(Collectors.toList());
+                .toList();
         return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), grantedAuthorities);
     }
 
